--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -64,6 +64,10 @@ import HomePage from "../pages/HomePage.astro";
 
   main {
     padding-top: 76px; /* Compensar el navbar fijo */
+    width: 100%;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   * {
