--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -70,6 +70,18 @@ import HomePage from "../pages/HomePage.astro";
     padding-right: 0;
   }
 
+  @media (max-width: 768px) {
+    main {
+      padding-top: 70px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    main {
+      padding-top: 65px;
+    }
+  }
+
   * {
     margin: 0;
     padding: 0;
